Replaced Collections.singletonMap() with Map.of()